--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.13",
     "react": "^18",
     "react-avatar": "^5.0.3",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18",
     "react-international-phone": "^4.3.0",
     "react-phone-number-input": "^3.4.8",
