--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-avatar": "^5.0.3",
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "react-international-phone": "^4.3.0",
     "react-phone-number-input": "^3.4.8",
     "react-redux": "^9.1.2",
