--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
+    "lottie-react": "^2.4.0",
     "next": "14.2.13",
     "react": "^18",
     "react-avatar": "^5.0.3",
