--- a/package.json
+++ b/package.json
@@ -9,19 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@reduxjs/toolkit": "^2.2.7",
-    "antd": "^5.21.1",
+    "antd": "^5.21.2",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "formik": "^2.4.6",
     "js-cookie": "^3.0.5",
     "lottie-react": "^2.4.0",
     "next": "14.2.13",
+    "qrcode.react": "^4.0.1",
     "react": "^18",
     "react-avatar": "^5.0.3",
     "react-awesome-reveal": "^4.2.14",
