--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@types/node": "22.10.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
